# mujoco_basic

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: basic.hpp  graphics.hpp
include/csv/: csv.hpp  csv_writer.hpp
model/: human.xml
src/: basic.cpp
